blocks/columns/columns.css
.columns {
  --stats-heading-text-color: var(--secondary-text-color-background);
  --stats-body-text-color: var(--text-color-background);
}

.section.columns-container.highlight .columns {
  background-color: var(--background-color);
  color: var(--text-color);
}

.section.columns-container.highlight .columns h2 {
  color: var(--text-color-highlight);
}

.section.columns-container .columns.stats h2 {
  font-family: var(--static-body-font-family);
  font-weight: 700;
  font-size: clamp(1.5rem, 2.465vw + 0.576rem, 2.375rem);
  color: var(--stats-heading-text-color);
  margin-bottom: 0;
}

.product .section.columns-container .columns.stats h2 {
  color: var(--primary-color);
}

.product .section.columns-container.secondary .columns.stats h2 {
  color: var(--secondary-text-color-background);
}

.columns > div {
  display: flex;
  flex-flow: row nowrap;
  gap: var(--layout-size-xl);
}

.columns img {
  width: 100%;
}

.columns > div > div {
  flex: 1;
}

.columns > div > div > *:first-child {
  margin-top: 0;
}

.columns > div > div > *:last-child {
  margin-bottom: 0;
}

.columns > div > .columns-img-col img {
  display: block;
}

.columns-wrapper:not(.help-open) .nav-help img,
.columns-wrapper:not(.help-open) .nav-help-close {
  height: 0;
}

.columns.inline-video > div {
  position: relative;
  height: 100%;
  margin-top: 5%;
}

.columns.heading > div {
  gap: 15vw;
}

.columns.icon-list > div {
  text-align: center;
  gap: 0;
}

.columns.stats > div {
  display: flex;
  flex-direction: row;
  background-color: var(--secondary-color);
  text-align: center;
  padding: var(--layout-size-l);
}

.columns.product-stats > div {
  gap: 0;
}

.columns.product-stats > div > div {
  display: grid;
  align-content: center;
  text-transform: uppercase;
}

.columns.inline-video {
  display: contents;
}

.columns.inline-video > div > div {
  position: relative;
  z-index: 1;
  width: 100%;
  height: 30vw;
}

.columns.product-stats-header > div > div {
  border: none;
}

.columns.product-stats > div:nth-child(3),
.columns.product-stats > div:nth-child(4) {
  background-color: var(--background-color);
}

.columns.product-stats > div:last-child {
  font-size: larger;
  font-weight: bold;
}

.columns.stats.border > div {
  margin-top: -2.8%;
  padding-top: 2.8%;
}

.columns.stats.background-image > div {
  background-color: transparent;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.columns.stats.primary > div {
  background-color: var(--primary-color);
}

.columns.stats.neutral > div {
  background-color: var(--neutral-color);
}

.columns.stats.wide > div {
  column-gap: 5px;
  text-align: unset;
  padding: unset;
}

.columns.inline-video.video-tall > div > div {
  min-height: 50vw;
}

.columns.product-stats > div:nth-child(3) > div {
  margin-top: var(--heading-font-size-l);
  margin-bottom: var(--heading-font-size-s);
}

.columns.icon-list > div > div:not(:last-child) {
  border-right: 1px solid var(--secondary-color);
}

.columns.stats.wide > div > div {
  background-color: transparent;
  background-image: linear-gradient(
    0deg,
    var(--primary-color) 0%,
    var(--secondary-color) 100%
  );
  padding: 3rem 3rem 1rem;
}

.columns.heading > div > div:first-child {
  flex: unset;
}

.columns.image-overlay p.animate,
.columns.image-overlay h2.animate {
  opacity: 1;
  animation-name: fade-in-right;
  animation-duration: 2s;
}

.columns.image-overlay > div > div:last-child {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1.5;
  padding: var(--layout-size-xl) var(--layout-size-xxl);
}

.columns.image-overlay > div > div:first-child {
  display: flex;
  align-items: end;
  flex-direction: row;
}

.columns.product-stats:not(.product-stats-header) > div:first-child > div,
.columns.product-stats:not(.product-stats-header) > div:nth-child(2) > div {
  border: 1px solid var(--primary-color);
  min-height: 128px;
}

.columns.inline-video:not(.video-tall) > div > div:last-child {
  margin-bottom: 10%;
}

.columns.product-stats > div:not(:first-child) > div:not(:first-child) {
  background-color: var(--background-color);
  font-size: larger;
  font-weight: bold;
}

.columns.product-stats > div > div picture {
  width: 80%;
  position: relative;
  left: 10%;
  right: 10%;
}

.product-stats-footer > p {
  font-size: large;
}

.product-stats-footer > p:last-child {
  font-size: larger;
  font-weight: bold;
}

.columns.stats > div p {
  font-family: var(--static-body-font-family);
  color: var(--stats-body-text-color);
  margin-top: 0.5em;
}

.columns.product-stats p:last-child {
  margin-top: 0;
}

.columns.product-stats p:first-child {
  margin-bottom: 0;
}

/* ICONS: Text area */
.columns.icon-list p:last-child {
  margin: 0 20%;
  line-height: 1.5;
  color: var(--secondary-color);
  font-size: 2vw;
  word-wrap: break-word;
}

.columns.icon-list p:first-child {
  height: auto;
  width: 100%;
  margin: 39px 0 0;
}

.columns.product-stats {
  text-align: center;
  background-color: transparent;
}

.columns.product-stats-header {
  margin: var(--layout-size-m) 15vw 0;
}

.columns.product-stats:not(.product-stats-header) {
  margin: var(--layout-size-xxl) 15vw;
  background-image: linear-gradient(
    180deg,
    var(--primary-color) 0%,
    var(--secondary-color) 250%
  );
}

div.has-header .columns.product-stats:not(.product-stats-header) {
  margin: 0 15vw var(--layout-size-xxl);
}

.product .columns.stats > div p {
  color: var(--text-color);
}

.columns.product-stats > div > div:first-child p,
.columns.product-stats > div > div:first-child em {
  color: var(--text-secondary-color-background);
}

.columns.icon-list.primary p:last-child {
  color: var(--primary-color);
}

.columns-wrapper.help-open .nav-help img {
  height: auto;
  width: 100%;
  padding-top: var(--layout-size-xxl);
  animation: fade-in-right 0.25s ease-out;
}

.columns.product-stats > div > div:first-child img {
  filter: brightness(51%) invert(100%);
}

.columns.icon-list.primary > div > div:not(:last-child) {
  border-right: 1px solid var(--primary-color);
}

.columns.button-full > div:nth-of-type(odd) > div:nth-of-type(even) {
  flex-grow: 1.5;
}

.columns.button-full > div:nth-of-type(even) > div:nth-of-type(odd) {
  flex-grow: 1.5;
}

.presentation main .columns.image-overlay.columns-2-cols > div > div {
  flex: auto;
}

.columns.product-stats:not(.product-stats-header) > div:first-child > div:not(:first-child) {
  background-color: var(--header-background-color);
}

.product-stats-footer {
  display: flex;
  flex-flow: column wrap;
  text-align: center;
  color: var(--primary-color);
  margin: -16px 0 32px;
  text-transform: uppercase;
}

.columns.inline-video > div > div .video-group {
  position: relative;
  height: 100%;
}

.columns.inline-video > div > div .video-group button {
  position: absolute;
  top: 35%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: none;
  background-color: #000000b3;
  border-radius: 5vw;
  cursor: pointer;
  width: 5vw;
  height: 5vw;
}

.columns.inline-video > div > div .video-group button::before {
  content: "";
  display: block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0.8vw 0 0.8vw 1.6vw;
  border-color: transparent transparent transparent #fffc;
  position: absolute;
  top: 50%;
  left: 54%;
  transform: translate(-50%, -50%);
  margin: auto;
}

.columns.inline-video > div > div .video-group button:hover::before {
  border-color: transparent transparent transparent #fff;
}

.columns.inline-video > div > div p.video-group video {
  position: absolute;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.columns.icon-list span.icon {
  height: auto;
  width: 45%;
  opacity: 1;
  margin: 0 auto;
}

.columns > div > .columns-img-col {
  order: 0;
}

.columns.image-overlay {
  margin: 0 auto;
}

.columns-wrapper.help-open .nav-help-close {
  animation: fade-in-from-none 1.25s ease-out;
}

.columns-wrapper.help-open span.icon-close {
  width: 40px;
  height: 40px;
  margin: 80px var(--layout-size-m) var(--layout-size-m);
  position: absolute;
  right: var(--layout-size-xxl);
}

/* Wine bottle animation needs to clip at the bottom edge of the div */
.presentation main .columns-2-cols p:not(.border).picture.animate {
  animation-name: fade-in-bottom-edge;
  margin-bottom: 0;
}

.columns.image-overlay > div > div > .picture {
  position: relative;
}

.columns.image-overlay > div > div > .picture:first-child {
  z-index: 10;
}

.columns.image-overlay > div > div > p:first-child img {
  position: relative;
  max-width: 95%;
  left: min(10vw, 130px);
  top: -3em;
}

.columns.image-overlay > div > div > p:last-child img {
  position: relative;
  max-width: 90%;
  top: calc(-15px - 3em);
  left: min(6vw, 80px);
  height: 30%;
}

.columns.inline-video > div:nth-of-type(odd) .video-background {
  background-image: var(--background-color-highlight);
  position: absolute;
  top: -16%;
  left: 8%;
  z-index: -2;
  width: 100%;
  height: 130%;
}

.columns.inline-video > div:nth-of-type(even) .video-background {
  background-image: linear-gradient(
    90deg,
    var(--secondary-color),
    var(--primary-color)
  );
  position: absolute;
  top: -16%;
  right: 8%;
  z-index: -2;
  width: 100%;
  height: 130%;
}

.columns.inline-video > div .video-background.animate {
  animation-delay: 0.25s;
}

.columns.inline-video > div:nth-of-type(odd) .video-group.animate,
.columns.inline-video > div:nth-of-type(odd) .video-background.animate {
  animation-name: fade-in-right;
}

.columns.inline-video > div:nth-of-type(even) .video-group.animate,
.columns.inline-video > div:nth-of-type(even) .video-background.animate {
  animation-name: fade-in-left;
}

.columns.heading div.has-help {
  display: flex;
}

.columns.heading div.has-help p:first-child {
  width: calc(100% - 100px);
}

.columns.heading div.has-help p:last-child {
  margin: auto 2% auto 4%;
}

.columns.heading span.icon-help {
  width: 40px;
  height: 40px;
  margin-top: var(--layout-size-m);
  animation-name: small-rotation;
  animation-duration: 10000ms;
  animation-iteration-count: infinite, infinite;
}

.columns-wrapper.help-open {
  padding-bottom: 0 !important;
  margin-bottom: -10px;
}

.columns-wrapper.help-open span.icon-help {
  opacity: 0.1;
}

.columns.heading span.icon-help svg > * {
  fill: var(--primary-color);
  color: var(--primary-color);
}

.columns.heading span.icon-help svg:hover > * {
  fill: var(--secondary-color);
  color: var(--secondary-color);
}

/* animations */
@media (prefers-reduced-motion: no-preference) {
  .no-animate {
    opacity: 1 !important;
  }

  .columns h2,
  .columns h3,
  .columns p {
    opacity: 0;
  }
}

